# spatialdata-query

./: .gitignore  .pylintrc  README.md  Snakefile  benchmark_polygon_query.py  pyproject.toml
pipeline/: data_generation.py  utils.py
pipeline/benchmarks/: data_operations.py  plot_data_operations.py  plot_spatial_query.py  spatial_query.py
scripts/: benchmark_polygon_query.py  generate_data.py  mpl_path.py  plot_benchmarks.py  read.mjs  sdata_polygon_query.py
