[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spatialdata-query-benchmarks"
version = "0.1.0"
description = "Benchmarks for SpatialData query operations"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "scverse Paris hackathon participants" },
]

dependencies = [
    "snakemake>=7.32.4",
    "pandas>=2.0.0",
    "numpy>=1.22.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "dask>=2023.3.0",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest]
testpaths = ["tests"]